src/objects/Treatment__c.object
<CustomObject>
    <description>What Treatment is the patient interested in.</description>
    <fields>
        <fullName>Additional_Amount__c</fullName>
        <label>Additional Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Contact__c</fullName>
        <label>Best Time to Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Morning (8a-11a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noon (11a-1p)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Afternoon (1p-4p)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening(4p-8p)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Manager_s_Feel__c</fullName>
        <label>Case Manager&apos;s Feel</label>
        <picklist>
            <picklistValues>
                <fullName>Not Going to Happen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs More Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking Better Than Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Oppty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>What date do you think this Interaction will close.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <label>Decision Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within Two Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Reconciliation__c</fullName>
        <label>Financial Reconciliation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Reguired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financing Reguired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hospital_Destination__c</fullName>
        <label>Hospital Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Quality__c</fullName>
        <label>Inquiry Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inquiry_Source__c</fullName>
        <label>Inquiry Source</label>
        <picklist>
            <picklistValues>
                <fullName>Internet Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Site_Recovery_Period__c</fullName>
        <label>On-Site Recovery Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Treatments</relationshipLabel>
        <relationshipName>Treatments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paying Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>(1) Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Post-Op</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Op_Follow_Up_Program__c</fullName>
        <label>Post-Op Follow Up Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Destination__c</fullName>
        <label>Preferred Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Form_of_Contact__c</fullName>
        <label>Preferred Form of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Travel_Date_From__c</fullName>
        <label>Preferred Travel Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Travel_Date_To__c</fullName>
        <label>Preferred Travel Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Provider__c</fullName>
        <label>Primary Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Category__c</fullName>
        <label>Procedure Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic/Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics/Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organ Tranplant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal  Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stem Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Date__c</fullName>
        <label>Procedure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Procedure_Treatment_Type__c</fullName>
        <label>Procedure Treatment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Anti-Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ataxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiomyopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerebral Palsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cirrhosis &amp; Hepatitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Limb Ischemia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulitple Sclerosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optic Nerve Hypoplasia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkinson&apos;s Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Cord Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <picklist>
            <controllingField>Procedure_Category__c</controllingField>
            <picklistValues>
                <fullName>ACL Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angiogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angioplasty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ataxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bariatric - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast Augmentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast LIft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiomyopathy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cataract surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCSVI Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCSVI for MS (venoplasty)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerebral Palsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemotherapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Birth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cirrhosis &amp; Hepatitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Limb Ischemia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Scan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Crowns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Dentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Implants</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_SLA__c</fullName>
        <formula>IF(TEXT(Stage__c) = &quot;New&quot;, 
  IF(((NOW() - CreatedDate) * 24) &lt; 1, &quot;GREEN&quot;,
    IF(((NOW() - CreatedDate) * 24) &lt; 2, &quot;YELLOW&quot;, &quot;RED&quot;)),
  IF(TEXT(Stage__c) = &quot;Attempted Contact&quot;,
    IF(((NOW() - CreatedDate) * 24) &lt; 24, &quot;GREEN&quot;,
      IF(((NOW() - CreatedDate) * 24) &lt; 36, &quot;YELLOW&quot;, &quot;RED&quot;)), &quot;NOT CALCULATED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <controllingField>Phase__c</controllingField>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Established</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested but not Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested but Hold for Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Approval Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quoting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Itinerary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Response 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Recontact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treament Information Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Providing Medical Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Records Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Approval Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Further Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult No Further Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show or Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trip Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Itinerary Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reschedule Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trip Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Payment Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Treatment_Date__c</fullName>
        <label>Treatment Date</label>
        <type>Date</type>
    </fields>
    <label>Treatment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR{00000000}</displayFormat>
        <label>Treatment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>